--- a/Class 1.ipynb
+++ b/Class 1.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "def are_anagrams(string_a, string_b):\n",
     "    if len(string_a) != len(string_b):             #covering the length case.\n",
-    "        return Faslse                              #if our strings are of unequal length, the O(1) - constant time\n",
+    "        return False                              #if our strings are of unequal length, the O(1) - constant time\n",
     "    char_times_a = dict()                          #The Dictionary will track which Charaters we've seen\n",
     "    char_times_b = dict()                          #each key is every character, and values are times seen\n",
     "    for i in range(len(string_a)):                 #loop from 0 to the length of string a\n",
