--- a/Class 1.ipynb
+++ b/Class 1.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "61d6fd5b",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
     "\n",
     "\n",
     "def are_anagrams(string_a, string_b):\n",
-    "    if len(string_a) != len(string_b):             #covering the length case.\n",
+    "    if len(string_a).lower() != len(string_b).lower():             #covering the length case.\n",
     "        return False                              #if our strings are of unequal length, the O(1) - constant time\n",
     "    char_times_a = dict()                          #The Dictionary will track which Charaters we've seen\n",
     "    char_times_b = dict()                          #each key is every character, and values are times seen\n",
@@ -119,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -134,6 +134,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "89a40351835eb9a5bb5793174605e8b9acd2a905591d2be32b17a19c6f94475b"
+   }
   }
  },
  "nbformat": 4,
